results/SVCOMP/2-shot/log-BinaryTree-2024_03_18_23_41_40.txt
public class BinaryTree {
  /** Internal class representing a Node in the tree. */
  private class Node {
    int value;
    Node left;
    Node right;

    Node(int v, Node l, Node r) {
      value = v;
      left = l;
      right = r;
    }
  }

  private Node root = null;

  /** Inserts a value in to the tree. */
  //@ ensures (\exists Node n; n != null && n.value == v) <==> (\forall Node n; n != null && n.value != v);
  public void insert(int v) {

    if (root == null) {
      root = new Node(v, null, null);
      return;
    }

    Node curr = root;
    while (true) {
      if (curr.value < v) {
        if (curr.right != null) {
          curr = curr.right;
        } else {
          curr.right = new Node(v, null, null);
          break;
        }
      } else if (curr.value > v) {
        if (curr.left != null) {
          curr = curr.left;
        } else {
          curr.left = new Node(v, null, null);
          break;
        }
      } else {
        break;
      }
    }
  }

  /** Searches for a value in the tree. */
  //@ ensures \result <==> (\exists Node n; n != null && n.value == v);
  public boolean search(int v) {
    Node curr = root;
    while (curr != null) { // N branches
      if (curr.value == v) { // N-1 branches
        return true;
      } else if (curr.value < v) { // N-1 branches
        curr = curr.right;
      } else {
        curr = curr.left;
      }
    }
    return false;
  }
}
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:18: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures (\exists Node n; n != null && n.value == v) <==> (\forall Node n; n != null && n.value != v);
                                             ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:18: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures (\exists Node n; n != null && n.value == v) <==> (\forall Node n; n != null && n.value != v);
                                                                                              ^
/home/max/Documents/JMLGPT/tmp/BinaryTree.java:49: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> (\exists Node n; n != null && n.value == v);
                                                          ^
3 errors

